<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment"
    style="@style/BackgroundColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_45sdp"
                android:background="@color/transparent"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingStart="@dimen/_1sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:src="@drawable/back_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_view_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/welcome_back"
                style="@style/BlackTextView"
                android:textSize="@dimen/_21ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back_btn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txt_view_welcome"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/login_account"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_15ssp"
                style="@style/BlackTextView"
                android:id="@+id/txt_view_login"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                app:layout_constraintTop_toBottomOf="@id/txt_view_login"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_41sdp"
                style="@style/BlackTextView"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/_12ssp"
                android:id="@+id/txt_view_mail"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_edit_text_drawable"
                app:layout_constraintTop_toBottomOf="@id/txt_view_mail"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:hint="@string/mailOrPhone"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/txt_mail"
                android:inputType="textEmailAddress"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                app:layout_constraintTop_toBottomOf="@id/txt_mail"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_12sdp"
                style="@style/BlackTextView"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/_12ssp"
                android:id="@+id/txt_view_password"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_edit_text_drawable"
                app:layout_constraintTop_toBottomOf="@id/txt_view_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:hint="@string/enter_password"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_11ssp"
                android:id="@+id/txt_password"
                android:inputType="textPassword" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/txt_password"
                app:layout_constraintBottom_toBottomOf="@+id/txt_password"
                android:src="@drawable/show_icon"
                android:layout_marginEnd="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="@+id/txt_password"
                android:id="@+id/show_icon"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/txt_password"
                app:layout_constraintBottom_toBottomOf="@+id/txt_password"
                android:src="@drawable/hide_icon"
                android:visibility="gone"
                android:layout_marginEnd="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="@+id/txt_password"
                android:id="@+id/hide_icon"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:id="@+id/password_instruction_layout"
                app:layout_constraintTop_toBottomOf="@+id/txt_password">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:track="@drawable/track_switch_drawable"
                    android:thumb="@drawable/thumb_switch_drawable"
                    android:id="@+id/remember_switch"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@+id/remember_switch"
                    android:text="@string/remember"
                    android:fontFamily="@font/sf_regular"
                    android:textSize="@dimen/_9ssp"
                    android:layout_marginStart="@dimen/_6sdp"
                    app:layout_constraintTop_toTopOf="@+id/remember_switch"
                    app:layout_constraintBottom_toBottomOf="@+id/remember_switch"
                    android:id="@+id/txt_view_remember"
                    style="@style/RememberTextView"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_7sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/txt_view_remember"
                    app:layout_constraintBottom_toBottomOf="@+id/txt_view_remember"
                    android:text="@string/forget"
                    style="@style/LinkTextStyle"
                    android:fontFamily="@font/sf_regular"
                    android:textSize="@dimen/_9ssp"
                    android:id="@+id/txt_forget"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gold"
                app:layout_constraintTop_toBottomOf="@+id/password_instruction_layout"
                android:layout_marginTop="@dimen/_37sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                app:cornerRadius="@dimen/_4sdp"
                android:id="@+id/btn_login"
                android:paddingTop="@dimen/_11sdp"
                android:paddingBottom="@dimen/_11sdp"
                android:textSize="@dimen/_11ssp"
                android:text="@string/login"
                android:fontFamily="@font/roboto_bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/GrayTextView"
                android:text="@string/not_user"
                app:layout_constraintTop_toBottomOf="@+id/btn_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/poppins_semi_bold"
                android:layout_marginTop="@dimen/_25sdp"
                android:id="@+id/txt_already_user"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/txt_already_user"
                android:backgroundTint="@color/background"
                app:strokeWidth="1dp"
                app:strokeColor="@color/gold"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                app:cornerRadius="@dimen/_4sdp"
                android:paddingTop="@dimen/_11sdp"
                android:paddingBottom="@dimen/_11sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="@string/signup"
                android:textColor="@color/gold"
                android:id="@+id/btn_sign_up"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="@dimen/_11ssp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>