<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/BtmSheetDialog">

    <View
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_6sdp"
        android:background="@drawable/view_review"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/view"
        android:layout_marginTop="@dimen/_12sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:text="@string/what_is_your_rate"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/metropolis_semi_bold"
        android:textSize="@dimen/_14ssp"
        android:id="@+id/txt_asking_rate"
        style="@style/ProductTextStyle.CategoryProduct"/>

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:numStars="5"
        android:progressTint="@color/stars_color"
        android:rating="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_asking_rate" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rating_bar"
        android:layout_marginTop="@dimen/_25sdp"
        android:text="@string/your_opinion"
        android:fontFamily="@font/metropolis_semi_bold"
        android:textSize="@dimen/_14ssp"
        android:gravity="center"
        style="@style/ProductTextStyle.CategoryProduct"
        android:id="@+id/txt_opinion"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        app:layout_constraintTop_toBottomOf="@id/txt_opinion"
        android:background="@drawable/review_txt"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:hint="@string/your_review"
        android:gravity="start"
        android:fontFamily="@font/metropolis_regular"
        android:textSize="@dimen/_11ssp"
        android:padding="@dimen/_9sdp"
        android:id="@+id/txt_review"/>


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SendMsgButton"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/txt_review"
        android:layout_marginTop="@dimen/_46sdp"
        android:layout_marginBottom="@dimen/_34sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/send_review"
        android:fontFamily="@font/rubik_medium"
        android:textSize="@dimen/_11ssp"
        android:id="@+id/send_review_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>