<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.ForgetPasswordFragment"
    style="@style/BackgroundColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_45sdp"
                android:background="@color/transparent"
                android:paddingEnd="@dimen/_5sdp"
                android:paddingStart="@dimen/_1sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:src="@drawable/back_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/back_btn"
                android:id="@+id/txt_title"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/forget"
                app:layout_constraintTop_toTopOf="@id/back_btn"
                app:layout_constraintBottom_toBottomOf="@id/back_btn"
                android:textSize="@dimen/_12ssp"
                style="@style/BlackTextView"
                android:layout_marginStart="@dimen/_7sdp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/back_btn"
                android:text="@string/request_mail"
                style="@style/AlphaBlackTextView"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textSize="@dimen/_11ssp"
                android:layout_marginTop="@dimen/_18sdp"
                android:id="@+id/txt_request_mail"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                app:layout_constraintTop_toBottomOf="@id/txt_request_mail"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_37sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/BlackTextView"
                android:fontFamily="@font/roboto_medium"
                android:textSize="@dimen/_12ssp"
                android:id="@+id/txt_view_mail"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/auth_edit_text_drawable"
                app:layout_constraintTop_toBottomOf="@id/txt_view_mail"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:hint="@string/mailOrPhone"
                android:fontFamily="@font/roboto_regular"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/txt_mail"
                android:inputType="text"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gold"
                app:layout_constraintTop_toBottomOf="@+id/txt_mail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_37sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                app:cornerRadius="@dimen/_4sdp"
                android:id="@+id/btn_send"
                android:textSize="@dimen/_11ssp"
                android:text="@string/send_code"
                android:fontFamily="@font/roboto_bold"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>