<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.PasswordChangedFragment"
    style="@style/BackgroundColor">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/password_changed"
        android:id="@+id/icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/icon"
        android:id="@+id/txt_view_changed_title"
        android:text="@string/password_changed_title"
        app:layout_constraintStart_toStartOf="@id/icon"
        app:layout_constraintEnd_toEndOf="@id/icon"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/_12ssp"
        style="@style/BlackTextView"
        android:layout_marginTop="@dimen/_18sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txt_view_changed_title"
        android:id="@+id/txt_view_changed_msg"
        android:text="@string/password_changed_msg"
        app:layout_constraintStart_toStartOf="@id/icon"
        app:layout_constraintEnd_toEndOf="@id/icon"
        android:fontFamily="@font/poppins_semi_bold"
        android:textSize="@dimen/_11ssp"
        style="@style/AlphaBlackTextView"
        android:layout_marginTop="@dimen/_7sdp"/>


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_37sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:cornerRadius="@dimen/_4sdp"
        android:id="@+id/btn_login"
        android:textSize="@dimen/_11ssp"
        android:text="@string/login"
        android:fontFamily="@font/roboto_bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>