<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/WhiteCardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/_18sdp"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_19sdp"
            android:src="@drawable/location_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/location_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/location"
            android:layout_marginTop="@dimen/_27sdp"
            android:fontFamily="@font/inter_semi_bold"
            style="@style/BlackTextView"
            android:textSize="@dimen/_15ssp"
            android:id="@+id/txt_location_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_location_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/location_request"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/inter_medium"
            style="@style/DialogTextView"
            android:textSize="@dimen/_12ssp"
            android:id="@+id/txt_location_request"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_location_request"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_27sdp"
            app:backgroundTint="@color/permission_request_light_btn"
            android:text="@string/allow"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_37sdp"
            android:id="@+id/btn_allow"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_allow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/_29sdp"
            app:backgroundTint="@color/white"
            style="@style/PermissionTextColor"
            android:text="@string/skip"
            app:cornerRadius="@dimen/_37sdp"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/_12ssp"
            android:id="@+id/btn_skip"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>